load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# Lets you run `bazel run //:gazelle` to generate BUILD files. Will need to be
# re-run if any of the directives below are changed.

# gazelle:prefix github.com/irfansharif/test-repo
# gazelle:build_file_name BUILD.bazel

gazelle(
    name = "gazelle",
    prefix = "github.com/irfansharif/test-repo",
)

go_library(
    name = "libmain",
    srcs = ["main.go", "@libroachv2//:all"],
    cdeps = ["//:libroach"],
    cgo = True,
    cppopts = [
        "-Iexternal/libroach/include",
    ],
    importpath = "github.com/irfansharif/test-repo",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "binary",
    embed = [":libmain"],
    visibility = ["//visibility:public"],
)

load("@rules_foreign_cc//tools/build_defs:cmake.bzl", "cmake_external")

# TODO(irfansharif): It's not able to find rocksdb headers for some reason.
cmake_external(
    name = "libroach",
    cache_entries = {
        "CMAKE_TARGET_MESSAGES": "OFF",
        "CMAKE_BUILD_TYPE": "Release",
        "ROCKSDB_LIB": "$EXT_BUILD_DEPS/librocksdb/lib/librocksdb.a",
        "SNAPPY_LIB": "$EXT_BUILD_DEPS/libsnappy/lib/libsnappy.a",
        "CRYPTOPP_LIB": "$EXT_BUILD_DEPS/libcryptopp/lib/libcryptopp.a",
        "JEMALLOC_LIB": "$EXT_BUILD_DEPS/libjemalloc/lib/libjemalloc.a",
        # TODO(irfansharif): Use proper targets for this.
        "PROTOBUF_LIB": "/Users/irfansharif/Software/native/x86_64-apple-darwin19.6.0/protobuf/libprotobuf.a",
    },
    lib_source = "@libroach//:all",
    make_commands = ["make roach",
                     "mkdir -p libroach/lib",
                     "mv libroach.a libroach/lib/libroach.a",
    ],
    static_libraries = ["libroach.a"],
    visibility = ["//visibility:public"],
    tools_deps = ["@googletest//:all", "@rocksdb//:all", "@protobuf//:all", "@libroach//:all"],
    deps = [":libsnappy", ":librocksdb", ":libcryptopp", ":libjemalloc"],
)

cmake_external(
    name = "librocksdb",
    cache_entries = {
        "CMAKE_TARGET_MESSAGES": "OFF",
        "WITH_GFLAGS": "OFF",
        "SNAPPY_LIBRARIES": "$EXT_BUILD_DEPS/libsnappy/lib/libsnappy.a",
        "SNAPPY_INCLUDE_DIR": "$EXT_BUILD_DEPS/libsnappy/include",
        "WITH_SNAPPY": "ON",
        "JEMALLOC_LIBRARIES": "/Users/irfansharif/Software/native/x86_64-apple-darwin19.6.0/jemalloc/lib/libjemalloc.a",
        "JEMALLOC_INCLUDE_DIR": "/Users/irfansharif/Software/native/x86_64-apple-darwin19.6.0/jemalloc/include",
        "WITH_JEMALLOC": "ON",
        "CMAKE_BUILD_TYPE": "Release",
        "USE_RTT": "1",
        "FAIL_ON_WARNINGS": "0",
    },
    env_vars = {
        "CFLAGS": " -msse3",
        "CXXFLAGS": " -msse3",
    },
    lib_source = "@rocksdb//:all",
    make_commands = [
        "make rocksdb",
        "mkdir -p librocksdb/lib",
        "mv librocksdb.a librocksdb/lib/librocksdb.a",
    ],
    static_libraries = ["librocksdb.a"],
    visibility = ["//visibility:public"],
    deps = [":libsnappy"],
)

cmake_external(
    name = "libsnappy",
    cache_entries = {
        "CMAKE_BUILD_TYPE": "Release",
        "CMAKE_TARGET_MESSAGES": "OFF",
    },
    lib_source = "@snappy//:all",
    static_libraries = ["libsnappy.a"],
    visibility = ["//visibility:public"],
    alwayslink = True,
)

cmake_external(
    name = "libcryptopp",
    cache_entries = {
        "CMAKE_BUILD_TYPE": "Release",
        "CMAKE_TARGET_MESSAGES": "OFF",
    },
    lib_source = "@cryptopp//:all",
    static_libraries = ["libcryptopp.a"],
    visibility = ["//visibility:public"],
)

load("@rules_foreign_cc//tools/build_defs:configure.bzl", "configure_make")

configure_make(
    name = "libjemalloc",
    # configure_in_place = True,
    autoconf = True,
    configure_options = [
        "--enable-prof",
    ] + select({
        "//conditions:default": ["AR=/usr/bin/ar"],
    }),
    lib_source = "@jemalloc//:all",
    static_libraries = ["libjemalloc.a"],
    visibility = ["//visibility:public"],
    make_commands = [
        "make build_lib_static",
        "mkdir -p libjemalloc/lib",
        "cp lib/libjemalloc.a libjemalloc/lib",
    ],
)

configure_make(
    name = "libkrb5",
    autoreconf = True,
    # configure_in_place = True,
    configure_command = "src/configure",
    configure_options = [
        "--enable-static",
        "--disable-shared",
    ] + select({
        "//conditions:default": ["AR=/usr/bin/ar"],
    }),
    configure_env_vars = {
        "CPFLAGS": "",
        "CXXFLAGS": "",
        },
    # cache_entries = {
    #     "protobuf_BUILD_TESTS": "OFF",
    #     "CMAKE_BUILD_TYPE": "Release",
    # },
    lib_source = "@krb5//:all",
    static_libraries = ["libgssapi_krb5.a"],
    visibility = ["//visibility:public"],
    make_commands = [
        "make",
        "mkdir -p libkrb5/lib",
        "cp libkrb5/libgssapi_krb5.a libkrb5/lib",
    ],
)
