load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "cpp_proto",
    srcs = ["adhoc.cpp.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "cpp_go_proto",
    importpath = "github.com/irfansharif/test-repo/c-deps/cryptopp",
    proto = ":cpp_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "cryptopp",
    srcs = [
        "3way.h",
        "adler32.h",
        "aes.h",
        "algebra.h",
        "algparam.h",
        "arc4.h",
        "argnames.h",
        "asn.h",
        "authenc.h",
        "base32.h",
        "base64.h",
        "basecode.h",
        "bench.h",
        "blake2.h",
        "blowfish.h",
        "blumshub.h",
        "camellia.h",
        "cast.h",
        "cbcmac.h",
        "ccm.h",
        "chacha.h",
        "channels.h",
        "cmac.h",
        "config.h",
        "cpu.h",
        "crc.h",
        "cryptlib.h",
        "default.h",
        "des.h",
        "dh.h",
        "dh2.h",
        "dll.h",
        "dmac.h",
        "dsa.h",
        "eax.h",
        "ec2n.h",
        "eccrypto.h",
        "ecp.h",
        "elgamal.h",
        "emsa2.h",
        "eprecomp.h",
        "esign.h",
        "factory.h",
        "fhmqv.h",
        "files.h",
        "filters.h",
        "fips140.h",
        "fltrimpl.h",
        "gcm.h",
        "gf256.h",
        "gf2_32.h",
        "gf2n.h",
        "gfpcrypt.h",
        "gost.h",
        "gzip.h",
        "hex.h",
        "hkdf.h",
        "hmac.h",
        "hmqv.h",
        "hrtimer.h",
        "ida.h",
        "idea.h",
        "integer.h",
        "iterhash.h",
        "keccak.h",
        "lubyrack.h",
        "luc.h",
        "mars.h",
        "md2.h",
        "md4.h",
        "md5.h",
        "mdc.h",
        "mersenne.h",
        "misc.h",
        "modarith.h",
        "modes.h",
        "modexppc.h",
        "mqueue.h",
        "mqv.h",
        "nbtheory.h",
        "network.h",
        "nr.h",
        "oaep.h",
        "oids.h",
        "osrng.h",
        "ossig.h",
        "panama.h",
        "pch.h",
        "pkcspad.h",
        "polynomi.h",
        "pssr.h",
        "pubkey.h",
        "pwdbased.h",
        "queue.h",
        "rabin.h",
        "randpool.h",
        "rc2.h",
        "rc5.h",
        "rc6.h",
        "rdrand.h",
        "resource.h",
        "rijndael.h",
        "ripemd.h",
        "rng.h",
        "rsa.h",
        "rw.h",
        "safer.h",
        "salsa.h",
        "seal.h",
        "secblock.h",
        "seckey.h",
        "seed.h",
        "serpent.h",
        "serpentp.h",
        "sha.h",
        "sha3.h",
        "shacal2.h",
        "shark.h",
        "simple.h",
        "skipjack.h",
        "smartptr.h",
        "socketft.h",
        "sosemanuk.h",
        "square.h",
        "stdcpp.h",
        "strciphr.h",
        "tea.h",
        "tiger.h",
        "trap.h",
        "trdlocal.h",
        "trunhash.h",
        "ttmac.h",
        "twofish.h",
        "validate.h",
        "vmac.h",
        "wait.h",
        "wake.h",
        "whrlpool.h",
        "winpipes.h",
        "words.h",
        "xtr.h",
        "xtrcrypt.h",
        "zdeflate.h",
        "zinflate.h",
        "zlib.h",
    ],
    embed = [":cpp_go_proto"],
    importpath = "github.com/irfansharif/test-repo/c-deps/cryptopp",
    visibility = ["//visibility:public"],
)
