load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "repo_proto",
    srcs = [
        "kdc.conf.proto",
        "krb5.conf.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "repo_go_proto",
    importpath = "github.com/irfansharif/test-repo/c-deps/krb5/src/kadmin/testing/proto",
    proto = ":repo_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":repo_go_proto"],
    importpath = "github.com/irfansharif/test-repo/c-deps/krb5/src/kadmin/testing/proto",
    visibility = ["//visibility:public"],
)
